# ipl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: set-captaincy.yml
docs/: how-to-play.md
scripts/: run.py  run_auto.py  scrape_rules.py  set_captaincy.py
src/ipl_fantasy/: auth.py  bot.py  config.py  driver.py  models.py  notify.py  playing_xi.py  schedule.py  strategy.py
