[project]
name = "ipl-fantasy"
version = "0.1.0"
description = "Bot to manage IPL fantasy team"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

# ---- Ruff configuration ----
# Docs: https://docs.astral.sh/ruff/settings/

[tool.ruff]
# Example customization: widen line length from default 88 to 100
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# driver.py has inline JavaScript strings that exceed line length — not worth breaking up
"src/ipl_fantasy/driver.py" = ["E501"]
